--- a/CaptainAmerica/css/style.css
+++ b/CaptainAmerica/css/style.css
@@ -6,6 +6,7 @@
 
 html, body {
     background-color:#3660ad;
+    overflow: hidden;
 }
 
 .container {
@@ -18,9 +19,19 @@ html, body {
 }
 
 .container:hover .rotate{
-    animation-name: transform;
+    animation-name: rotate-stuff;
     animation-duration: 1s;
     animation-iteration-count: infinite;
+}
+
+@keyframes rotate-stuff {
+    0% {
+        transform: rotate(0deg);
+    }
+    
+    100% {
+        transform: rotate(72deg);
+    }
 }
 
 #red-circle-outer {
