--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ html, body {
     margin-top:40px;
     padding-top: 10px;
     padding-bottom: 10px;
+    
+    background-color:#1f1f1f;
 }
 
 .logoItem {
@@ -46,5 +48,13 @@ html, body {
 }
 
 .logoItemImg {
+    width: 250px;
+}
+
+h2 {
+    color: #e6e6e6;
+}
+
+#jsSection img {
     width: 250px;
 }
